// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessage it renders other messages 1`] = `
.c0 {
  border: 1px solid #eaeaea;
  background-color: #fafafa;
  padding: 15px;
  max-width: 500px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 6px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  margin-top: 9px;
}

.c1 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Roboto;
}

.c2 {
  color: #333;
}

.c3 {
  margin-left: 30px;
  color: #333;
}

.c4 {
  margin: 9px 0 0;
  font-family: Playfair Display;
  font-size: 1.2em;
  line-height: 1.65em;
  color: #333;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      stefan
    </span>
    <span
      className="c3"
    >
      1970-1-1
       - 
      1:00:00 AM
    </span>
  </div>
  <p
    className="c4"
  >
    this is another chat message
  </p>
</div>
`;

exports[`ChatMessage it renders own messages 1`] = `
.c0 {
  border: 1px solid #eaeaea;
  background-color: #e8f9f2;
  padding: 15px;
  max-width: 500px;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 0px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  margin-top: 9px;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c1 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Roboto;
}

.c2 {
  color: #333;
}

.c3 {
  margin-left: 30px;
  color: #333;
}

.c4 {
  margin: 9px 0 0;
  font-family: Playfair Display;
  font-size: 1.2em;
  line-height: 1.65em;
  color: #333;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      christian
    </span>
    <span
      className="c3"
    >
      1970-1-1
       - 
      1:00:00 AM
    </span>
  </div>
  <p
    className="c4"
  >
    this is my chat message
  </p>
</div>
`;
